base jarwall update

--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -1,7 +1,4 @@
 <div class="navbar-custom">
-  <button class="button-menu-mobile open-left">
-    <i class="mdi mdi-menu"></i>
-  </button>
   <ul class="list-unstyled topbar-menu float-end mb-0">
     <li class="dropdown notification-list">
       <a class="nav-link dropdown-toggle nav-user arrow-none me-0" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
@@ -17,7 +14,7 @@
         <div class=" dropdown-header noti-title">
           <h6 class="text-overflow m-0">Welcome !</h6>
         </div>
-        <a href="#" class="dropdown-item notify-item">
+        <a href="{% url 'user_detail_view' request.user.id %}" class="dropdown-item notify-item">
           <i class="mdi mdi-account-circle me-1"></i>
           <span>My Account</span>
         </a>
