--- a/templates/error_pages/404.html
+++ b/templates/error_pages/404.html
@@ -1,8 +1,38 @@
-<div class="container-fluid">
-  <div class="text-center">
-    <div class="error mx-auto" data-text="404">404</div>
-    <p class="lead text-gray-800 mb-5">Page Not Found</p>
-    <p class="text-gray-500 mb-0">It looks like you found a glitch in the matrix...</p>
-    <a href="{% url 'dashboard_view' %}">← Back to Dashboard</a>
+{% load static %}
+
+{% extends "common/base.html" %}
+
+{% block title %}
+Login | Property Hub
+{% endblock %}
+
+{% block login %}
+<div class="login-page">
+  <div class="account-pages pt-2 pt-sm-5 pb-4 pb-sm-5">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-xxl-4 col-lg-5">
+          <div class="card">
+            <div class="card-header pt-4 pb-4 text-center bg-primary">
+              <a href="/">
+                <span class="fs-3 mb-2 text-white">Property HUB</span>
+              </a>
+            </div>
+            <div class="card-body p-4">
+              <div class="text-center">
+                <h1 class="text-error">4<i class="mdi mdi-emoticon-sad"></i>4</h1>
+                <h4 class="text-uppercase text-danger mt-3">Page Not Found</h4>
+                <p class="text-muted mt-3">It's looking like you may have taken a wrong turn. Don't worry... it
+                  happens to the best of us. Here's a
+                  little tip that might help you get back on track.</p>
+                <a class="btn btn-info mt-3" href="/"><i class="mdi mdi-reply"></i> Return Home</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+  {% include "common/footer.html" %}
 </div>
+{% endblock %}
