--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -8,14 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
-  <link href="{% static '/vendor/app.min.css' %}" rel="stylesheet" type="text/css" id="light-style" />
-  <link href="{% static '/vendor/bootstrap_5x/dataTables.bootstrap5.css' %}" rel="stylesheet" type="text/css" />
-  <link href="{% static '/vendor/bootstrap_5x/responsive.bootstrap5.css' %}" rel="stylesheet" type="text/css" />
-  <link href="{% static '/vendor/bootstrap_5x/buttons.bootstrap5.css' %}" rel="stylesheet" type="text/css" />
-  <link href="{% static '/vendor/bootstrap_5x/select.bootstrap5.css' %}" rel="stylesheet" type="text/css" />
-  <link href="{% static '/vendor/icons.min.css' %}" rel="stylesheet" type="text/css" />
+  <link href="{% static 'css/app.css' %}" rel="stylesheet" type="text/css" id="light-style" />
+  <link href="{% static 'css/vendor/dataTables.bootstrap5.css' %}" rel="stylesheet" type="text/css" />
+  <link href="{% static 'css/vendor/responsive.bootstrap5.css' %}" rel="stylesheet" type="text/css" />
+  <link href="{% static 'css/vendor/buttons.bootstrap5.css' %}" rel="stylesheet" type="text/css" />
+  <link href="{% static 'css/vendor/select.bootstrap5.css' %}" rel="stylesheet" type="text/css" />
+  <link href="{% static 'css/vendor/select2.min.css' %}" rel="stylesheet" type="text/css" />
+  <link href="{% static 'css/icons.css' %}" rel="stylesheet" type="text/css" />
   <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
-  <link href="{% static '/css/style.css' %}" type="text/css" rel="stylesheet" />
+
+  <link href="{% static '/style.css' %}" type="text/css" rel="stylesheet" />
 
   <title>
     {% block title %}
@@ -57,7 +59,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+  <script src="{% static 'script.js' %}" type="text/javascript"></script>
+  <script src="{% static 'js/vendor/select2.min.js' %}" type="text/javascript"></script>
 
   {% block extrascripts %}
   {% endblock %}
