--- a/projects/templates/projects/organization_form.html
+++ b/projects/templates/projects/organization_form.html
@@ -1,7 +1,7 @@
 {% extends "common/base.html" %}
 
 {% block title %}
-  {% if organization %}
+  {% if 'update' in request.path %}
     Update {{ organization.name }}
   {% else %}
     Create Organization
